--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,6 @@ pint==0.8.1
 pymc3==3.5
 scikit-image==0.14.1
 scikit_learn==0.20.0
-tifffile==0.15.1
+tifffile==2019.1.30
 trackpy==0.4.1
+xlrd >= 0.9.0
