--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
-seaborn==0.9.0
-pandas==0.23.4
-coloredlogs==10.0
-scipy==1.1.0
-scikit_image==0.14.0
-opencv_python_headless==3.4.2.17
-matplotlib==2.2.2
-numpy==1.15.1
+Jinja2==2.10
 Pillow==5.2.0
 PyQt4==4.11.4
+coloredlogs==10.0
 h5py==2.8.0
-Jinja2==2.10
+matplotlib==3.0.2
+numpy==1.15.1
+opencv-contrib-python-headless==3.4.2.17
+pandas==0.23.4
 pdfkit==0.6.1
 pint==0.8.1
 pymc3==3.5
 scikit-image==0.14.1
-scikit_learn==0.20.0
+scikit-learn==0.20.0
+scipy==1.1.0
+seaborn==0.9.0
 tifffile==2019.1.30
 trackpy==0.4.1
 xlrd >= 0.9.0
