--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 Jinja2==2.10
 Pillow==5.2.0
-PyQt4==4.11.4
+PyQt5==5.11.3
 coloredlogs==10.0
 czifile==2019.7.2
 h5py==2.8.0
 matplotlib==3.0.2
-numpy==1.15.1
+numpy==1.16.0
 opencv-contrib-python-headless==3.4.2.17
 pandas==0.23.4
 pdfkit==0.6.1
@@ -15,6 +15,7 @@ scikit-image==0.14.1
 scikit-learn==0.20.0
 scipy==1.1.0
 seaborn==0.9.0
+tables==3.6.1
 tifffile==2019.7.2
 trackpy==0.4.1
 xlrd >= 0.9.0
